2011-06-29  Changpeng Fang  <changpeng.fang@amd.com>
	Backport from mainline
	2011-06-29  Changpeng Fang  <changpeng.fang@amd.com>

	* config/i386/i386.opt (mprefer-avx128): Redefine the flag as a Mask option.
	* config/i386/i386.h (ix86_tune_indices): Add X86_TUNE_AVX128_OPTIMAL entry.
	(TARGET_AVX128_OPTIMAL): New definition.
	* config/i386/i386.c (initial_ix86_tune_features): Initialize
	X86_TUNE_AVX128_OPTIMAL entry.
	(ix86_option_override_internal): Enable the generation
	of the 128-bit instructions when TARGET_AVX128_OPTIMAL is set.
	(ix86_preferred_simd_mode): Use TARGET_PREFER_AVX128.
	(ix86_autovectorize_vector_sizes): Use TARGET_PREFER_AVX128.

2011-06-29  Harsha Jagasia <harsha.jagasia@amd.com>

	Backport from mainline
	2011-05-31  Alexandre Oliva  <aoliva@redhat.com>

	* config/i386/i386.c (ix86_rtx_costs): Drop NEG from sub for FMA.
	* config/i386/sse.md: Add n to negated FMA pattern names.

2011-06-29  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/49539
	* tree-ssa-forwprop.c (can_propagate_from): Check for abnormal SSA
	names by means of stmt_references_abnormal_ssa_name.
	(associate_plusminus): Call can_propagate_from before propagating
	from definition statements.

2011-06-29  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2011-06-24  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimizations/49516
	* tree-sra.c (sra_modify_assign): Choose the safe path for
	aggregate copies if we also did scalar replacements.

2011-06-28  Changpeng Fang  <changpeng.fang@amd.com>

	Backport from mainline
	2011-06-20  Changpeng Fang  <changpeng.fang@amd.com>

	PR target/49089
	* config/i386/i386.c (avx256_split_unaligned_load): New definition.
	(avx256_split_unaligned_store): New definition.
	(ix86_option_override_internal): Enable avx256 unaligned load/store
	splitting only when avx256_split_unaligned_load/store is set.

2011-06-28  Changpeng Fang  <changpeng.fang@amd.com>

	Backport from mainline