@@ -1,3 +1,14 @@
+2011-06-30  Georg-Johann Lay  <avr@gjlay.de>
+	
+	PR target/34734
+	Backport from mainline
+	* config/avr/avr.c (avr_handle_progmem_attribute): Move warning 
+	about uninitialized data attributed 'progmem' from here...
+	(avr_encode_section_info): ...to this new function.
+	(TARGET_ENCODE_SECTION_INFO): New define.
+	(avr_section_type_flags): For data in ".progmem.data", remove
+	section flag SECTION_WRITE.
+
 2011-06-29  Changpeng Fang  <changpeng.fang@amd.com>
 	Backport from mainline
 	2011-06-29  Changpeng Fang  <changpeng.fang@amd.com>
